k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airports-front
  labels:
    name: airports-front
spec:
  ports:
  - port: 8080
    name: http
  selector:
    name: airports-front
