k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: airports-front
spec:
  to:
    kind: Service
    name: airports-front
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
